--- a/public/i18n/ru.json
+++ b/public/i18n/ru.json
@@ -36,8 +36,8 @@
   "BUTTON_SHOP_ALL": "Подробнее",
   "BUTTON_SUBSCRIBE": "Подписаться",
   "BUTTON_TRACK": "Отследить",
-  "BUTTON_UPDATE_CART": "Обновить корзину",
-  "BUTTON_VIEW_CART": "Корзина",
+  "BUTTON_UPDATE_CART": "Обновить цитата",
+  "BUTTON_VIEW_CART": "добавить к цитате",
 
   "COUNTRY_NAME_LAND": "Случайная Земля",
   "COUNTRY_NAME_RAND": "Случайная Страна",
@@ -105,9 +105,9 @@
   "HEADER_RELATED_PRODUCTS": "Сопутствующие товары",
   "HEADER_SELECT_VEHICLE": "Выберите автомобиль",
   "HEADER_SHOP": "Каталог",
-  "HEADER_SHOPPING_CART": "Корзина",
+  "HEADER_SHOPPING_CART": "Список цитат",
   "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "В корзине пока ничего нет.<br>Перейдите на главную страницу чтобы начать сначала.",
-  "HEADER_SHOPPING_CART_EMPTY_TITLE": "Корзина пуста",
+  "HEADER_SHOPPING_CART_EMPTY_TITLE": "Список цитат пуста",
   "HEADER_SPECIAL_OFFERS": "Со скидкой",
   "HEADER_TOP_RATED": "Популярные",
   "HEADER_TRACK_ORDER": "Статус заказа",
@@ -201,7 +201,7 @@
   "LINK_BLOG": "Блог",
   "LINK_BRANDS": "Бренды",
   "LINK_CALCULATE_SHIPPING": "Рассчитать доставку",
-  "LINK_CART": "Корзина",
+  "LINK_CART": "Список цитат",
   "LINK_CHECKOUT": "Оформление заказа",
   "LINK_COMPARE": "Сравнение товаров",
   "LINK_CONTACT_US": "Контакты",
@@ -282,10 +282,10 @@
   "TEXT_EMAIL_ADDRESS": "Email адрес",
   "TEXT_INDICATOR_ACCOUNT_LABEL": "Привет, Войти",
   "TEXT_INDICATOR_ACCOUNT_VALUE": "Мой Аккаунт",
-  "TEXT_INDICATOR_CART_LABEL": "Моя Корзина",
+  "TEXT_INDICATOR_CART_LABEL": "Моя Список цитат",
   "TEXT_KEY_FEATURES": "Особенности",
   "TEXT_MOBILE_INDICATOR_ACCOUNT": "Аккаунт",
-  "TEXT_MOBILE_INDICATOR_CART": "Корзина",
+  "TEXT_MOBILE_INDICATOR_CART": "Список цитат",
   "TEXT_MOBILE_INDICATOR_GARAGE": "Машины",
   "TEXT_MOBILE_INDICATOR_WISHLIST": "Избранное",
   "TEXT_MOBILE_MENU_PHONE_TITLE": "Бесплатный звонок 24/7",
@@ -348,7 +348,7 @@
   "TEXT_TIMER_MINUTES": "Мин",
   "TEXT_TIMER_SECONDS": "Сек",
   "TEXT_TOAST_PASSWORD_CHANGED": "Пароль успешно изменен.",
-  "TEXT_TOAST_PRODUCT_ADDED_TO_CART": "Товар \"{productName}\" добавлен в корзину!",
+  "TEXT_TOAST_PRODUCT_ADDED_TO_CART": "Товар \"{productName}\" добавить к цитате!",
   "TEXT_TOAST_PRODUCT_ADDED_TO_COMPARE": "Товар \"{productName}\" добавлен к сравнению!",
   "TEXT_TOAST_PRODUCT_ADDED_TO_WISHLIST": "Товар \"{productName}\" добавлен в избранное!",
   "TEXT_TOAST_PROFILE_SAVED": "Информация о вашей учетной записи успешно сохранена.",
