[Change] update logo

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -37,7 +37,7 @@
   "BUTTON_SUBSCRIBE": "Subscribe",
   "BUTTON_TRACK": "Track",
   "BUTTON_UPDATE_CART": "Update Quote",
-  "BUTTON_VIEW_CART": "View Quote",
+  "BUTTON_VIEW_CART": "View Inquiry List",
 
   "COUNTRY_NAME_LAND": "RandomLand",
   "COUNTRY_NAME_RAND": "Random Federation",
@@ -69,7 +69,7 @@
   "HEADER_ADDRESSES": "Addresses",
   "HEADER_BESTSELLERS": "Bestsellers",
   "HEADER_BILLING_DETAILS": "Billing Details",
-  "HEADER_CART_TOTALS": "Cart Totals",
+  "HEADER_CART_TOTALS": "Inquiry Form",
   "HEADER_CATEGORIES": "Categories",
   "HEADER_CHANGE_PASSWORD": "Change Password",
   "HEADER_CHECKOUT": "Checkout",
@@ -105,9 +105,9 @@
   "HEADER_RELATED_PRODUCTS": "Related Products",
   "HEADER_SELECT_VEHICLE": "Select Vehicle",
   "HEADER_SHOP": "Shop",
-  "HEADER_SHOPPING_CART": "Quote List",
-  "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "You have no products in your quote list.<br>Go to the home page to start browsing our store.",
-  "HEADER_SHOPPING_CART_EMPTY_TITLE": "Quote List Is Empty",
+  "HEADER_SHOPPING_CART": "Inquiry List",
+  "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "You have no products in your inquiry list.<br>Go to the home page to start browsing our store.",
+  "HEADER_SHOPPING_CART_EMPTY_TITLE": "Inquiry List Is Empty",
   "HEADER_SPECIAL_OFFERS": "Special Offers",
   "HEADER_TOP_RATED": "Top Rated",
   "HEADER_TRACK_ORDER": "Track Order",
@@ -129,7 +129,16 @@
   "INPUT_EMAIL_ADDRESS_LABEL": "Email address",
   "INPUT_EMAIL_ADDRESS_PLACEHOLDER": "user@example.com",
   "INPUT_FIRST_NAME_LABEL": "First Name",
+  "INPUT_FORM_NAME_LABEL": "Name",
+  "INPUT_FORM_COMPANY_LABEL": "Company Name",
+  "INPUT_FORM_WEBSITE_LABEL": "Website",
+  "INPUT_FORM_EMAIL_LABEL": "Email",
+  "INPUT_FORM_MESSAGE_LABEL": "Message",
   "INPUT_FIRST_NAME_PLACEHOLDER": "Mark",
+  "INPUT_FIRST_COMPAMY_PLACEHOLDER": "ALPHABET",
+  "INPUT_FIRST_WEBSITE_PLACEHOLDER": "website.com",
+  "INPUT_FIRST_EMAIL_PLACEHOLDER": "egmail@gmail.com",
+  "INPUT_FIRST_MESSAGE_PLACEHOLDER": "Enter your message here...",
   "INPUT_LAST_NAME_LABEL": "Last Name",
   "INPUT_LAST_NAME_PLACEHOLDER": "Twain",
   "INPUT_LIMIT_LABEL": "Show",
@@ -282,7 +291,7 @@
   "TEXT_EMAIL_ADDRESS": "Email Address",
   "TEXT_INDICATOR_ACCOUNT_LABEL": "Hello, Log In",
   "TEXT_INDICATOR_ACCOUNT_VALUE": "My Account",
-  "TEXT_INDICATOR_CART_LABEL": "Quote List",
+  "TEXT_INDICATOR_CART_LABEL": "Inquiry List",
   "TEXT_KEY_FEATURES": "Key Features",
   "TEXT_MOBILE_INDICATOR_ACCOUNT": "Account",
   "TEXT_MOBILE_INDICATOR_CART": "Cart",
@@ -348,7 +357,7 @@
   "TEXT_TIMER_MINUTES": "Mins",
   "TEXT_TIMER_SECONDS": "Secs",
   "TEXT_TOAST_PASSWORD_CHANGED": "Password has been successfully changed.",
-  "TEXT_TOAST_PRODUCT_ADDED_TO_CART": "Product \"{productName}\" added to quote list!",
+  "TEXT_TOAST_PRODUCT_ADDED_TO_CART": "Product \"{productName}\" added to inquiry list!",
   "TEXT_TOAST_PRODUCT_ADDED_TO_COMPARE": "Product \"{productName}\" added to compare!",
   "TEXT_TOAST_PRODUCT_ADDED_TO_WISHLIST": "Product \"{productName}\" added to wish list!",
   "TEXT_TOAST_PROFILE_SAVED": "Your account information was saved successfully.",
@@ -363,5 +372,5 @@
   "TEXT_VEHICLE_ENGINE": "Engine {engine}",
   "TEXT_VEHICLE_FILTER_HELP": "Select a vehicle to filter out only exact fit parts.",
   "TEXT_WORKING_HOURS": "Working Hours",
-  "TEXT_YOUR_SHOPPING_CART_IS_EMPTY": "Your quote list is empty!"
+  "TEXT_YOUR_SHOPPING_CART_IS_EMPTY": "Your inquiry list is empty!"
 }
