--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -36,7 +36,7 @@
   "BUTTON_SHOP_ALL": "Shop All",
   "BUTTON_SUBSCRIBE": "Subscribe",
   "BUTTON_TRACK": "Track",
-  "BUTTON_UPDATE_CART": "Update Quote",
+  "BUTTON_UPDATE_CART": "Update Inquiry",
   "BUTTON_VIEW_CART": "View Inquiry List",
 
   "COUNTRY_NAME_LAND": "RandomLand",
@@ -74,7 +74,7 @@
   "HEADER_CHANGE_PASSWORD": "Change Password",
   "HEADER_CHECKOUT": "Checkout",
   "HEADER_COMPARE": "Compare",
-  "HEADER_COMPARE_EMPTY_SUBTITLE": "You have no products in your compare list.<br>Go to the home page to start browsing our store.",
+  "HEADER_COMPARE_EMPTY_SUBTITLE": "You have no products in your compare list.<br>Go to the home page to start browsing our products.",
   "HEADER_COMPARE_EMPTY_TITLE": "Compare List Is Empty",
   "HEADER_CONTACT_US": "Contact Us",
   "HEADER_DASHBOARD": "Dashboard",
@@ -106,13 +106,13 @@
   "HEADER_SELECT_VEHICLE": "Select Vehicle",
   "HEADER_SHOP": "Shop",
   "HEADER_SHOPPING_CART": "Inquiry List",
-  "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "You have no products in your inquiry list.<br>Go to the home page to start browsing our store.",
+  "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "You have no products in your inquiry list.<br>Go to the home page to start browsing our products.",
   "HEADER_SHOPPING_CART_EMPTY_TITLE": "Inquiry List Is Empty",
   "HEADER_SPECIAL_OFFERS": "Special Offers",
   "HEADER_TOP_RATED": "Top Rated",
   "HEADER_TRACK_ORDER": "Track Order",
   "HEADER_WISHLIST": "Wishlist",
-  "HEADER_WISHLIST_EMPTY_SUBTITLE": "You have no products in your wishlist.<br>Go to the home page to start browsing our store.",
+  "HEADER_WISHLIST_EMPTY_SUBTITLE": "You have no products in your wishlist.<br>Go to the home page to start browsing our products.",
   "HEADER_WISHLIST_EMPTY_TITLE": "Wishlist Is Empty",
   "HEADER_WRITE_REVIEW": "Write A Review",
   "HEADER_YOUR_ORDER": "Your Order",
