[Change] need update hr 4

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -22,7 +22,7 @@
   "BUTTON_LOGIN": "Login",
   "BUTTON_PLACE_ORDER": "Place Order",
   "BUTTON_POST_REVIEW": "Post Your Review",
-  "BUTTON_PROCEED_TO_CHECKOUT": "Proceed to checkout",
+  "BUTTON_PROCEED_TO_CHECKOUT": "Send Request",
   "BUTTON_QUICKVIEW": "Quick view",
   "BUTTON_REGISTER": "Register",
   "BUTTON_REMOVE": "Remove",
@@ -185,7 +185,7 @@
   "INPUT_VEHICLE_BRAND_LABEL": "Brand",
   "INPUT_VEHICLE_BRAND_PLACEHOLDER": "Select Brand",
   "INPUT_VEHICLE_ENGINE_LABEL": "Engine",
-  "INPUT_VEHICLE_ENGINE_PLACEHOLDER": "Select Engine",
+  "INPUT_VEHICLE_ENGINE_PLACEHOLDER": "Select Category",
   "INPUT_VEHICLE_MODEL_LABEL": "Model",
   "INPUT_VEHICLE_MODEL_PLACEHOLDER": "Select Model",
   "INPUT_VEHICLE_YEAR_LABEL": "Year",
