--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -15,7 +15,7 @@
   "BUTTON_CLEAR_ALL": "Clear All",
   "BUTTON_CLEAR_LIST": "Clear List",
   "BUTTON_DEPARTMENTS": "Menu",
-  "BUTTON_DEPARTMENTS_LONG": "Shop By Category",
+  "BUTTON_DEPARTMENTS_LONG": "Inquire By Category",
   "BUTTON_EDIT_PROFILE": "Edit Profile",
   "BUTTON_FILTERS": "Filters",
   "BUTTON_GO_TO_HOMEPAGE": "Go To Homepage",
@@ -33,7 +33,7 @@
   "BUTTON_SEARCH_SELECT_VEHICLE_MOBILE": "Vehicle",
   "BUTTON_SEE_FULL_DETAILS": "See full details",
   "BUTTON_SELECT_VEHICLE": "Select Vehicle",
-  "BUTTON_SHOP_ALL": "Shop All",
+  "BUTTON_SHOP_ALL": "Inquire All",
   "BUTTON_SUBSCRIBE": "Subscribe",
   "BUTTON_TRACK": "Track",
   "BUTTON_UPDATE_CART": "Update Inquiry",
@@ -104,7 +104,7 @@
   "HEADER_REGISTER": "Register",
   "HEADER_RELATED_PRODUCTS": "Related Products",
   "HEADER_SELECT_VEHICLE": "Select Vehicle",
-  "HEADER_SHOP": "Shop",
+  "HEADER_SHOP": "Products",
   "HEADER_SHOPPING_CART": "Inquiry List",
   "HEADER_SHOPPING_CART_EMPTY_SUBTITLE": "You have no products in your inquiry list.<br>Go to the home page to start browsing our products.",
   "HEADER_SHOPPING_CART_EMPTY_TITLE": "Inquiry List Is Empty",
@@ -228,8 +228,8 @@
   "LINK_REMOVE": "Remove",
   "LINK_RETURNS": "Returns",
   "LINK_SEE_FULL_SPECIFICATION": "See Full Specification",
-  "LINK_SHOP": "Shop",
-  "LINK_SHOP_ALL": "Shop All",
+  "LINK_SHOP": "Products",
+  "LINK_SHOP_ALL": "All Products",
   "LINK_SHOW_PARTS": "Show Parts",
   "LINK_SITE_MAP": "Site Map",
   "LINK_SPECIAL_OFFERS": "Special Offers",
@@ -267,10 +267,10 @@
   "TEXT_ALERT_VEHICLE_FOUND": "Found: {year} {make} {model} {engine}",
   "TEXT_ALL_VEHICLES": "All Vehicles",
   "TEXT_BADGE_SALE": "Sale",
-  "TEXT_BANNER_ONE_BUTTON": "Shop Now",
+  "TEXT_BANNER_ONE_BUTTON": "Inquire Now",
   "TEXT_BANNER_ONE_SUBTITLE": "Synthetic motor oil with free shipping<br>Friction free life guaranteed",
   "TEXT_BANNER_ONE_TITLE": "Motor Oils",
-  "TEXT_BANNER_TWO_BUTTON": "Shop Now",
+  "TEXT_BANNER_TWO_BUTTON": "Inquire Now",
   "TEXT_BANNER_TWO_SUBTITLE": "Luxurious interior part for real aesthetes<br>Leather, fabric, ivory and more.",
   "TEXT_BANNER_TWO_TITLE": "Save up to $40",
   "TEXT_BILLING_ADDRESS": "Billing Address",
